# sandhi-splitter

./: .gitignore  .testr.conf  .travis.yml  AUTHORS  ChangeLog  Makefile  README.md  model.json  requirements.txt  setup.cfg  setup.py  tox.ini
data/: analysis.py  combined  ltrc_dataset  old_test  out  owndata  ss_data  testdata
docs/: Makefile  Testing.md  Training.md  conf.py  index.rst  index.txt.backup  make.bat
log/: split.txt
models/: model.json
output/: results.txt  unsplit.txt
sandhi-splitter/: trie.py
sandhisplitter/: __init__.py  benchmark_model.py  joiner.py  model.py  postprocessor.py  splitter.py  test.py  train.py  trie.py  util.py
sandhisplitter/models/: model.json
sandhisplitter/tests/: test_init.py  test_joiner.py  test_model.py  test_postprocessor.py  test_splitter.py  test_trie.py  test_util.py
sandhisplitter/tests/resources/: join_cases.txt  samples.txt
