[metadata]
name = sandhisplitter
summary = Split words taking into account morphophonemic transformations
description-file =
  README.md
author = Jerin Philip
author-email = monu1618@gmail.com
home-page = 
classifier =
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  License :: OSI Approved
  License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
  Programming Language :: Python
  Programming Language :: Python :: 3

[files]
packages = sandhisplitter

[build-sphinx]
all_files = 1
source-dir = docs

[wheel]
universal = 1

[entry_points]
console_scripts=
    sandhisplitter_train = sandhisplitter.train:main
    sandhisplitter_benchmark_model = sandhisplitter.benchmark_model:main
